added lists for songs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="forecast_wind">%1$d%2$s</string>
     <string name="forecast_date_time">%1$tb %1$te, %1$tl:%1$tM %1$tp</string>
 
-    <string name="label_current_weather">Home</string>
+    <string name="label_current_weather">Media Player</string>
     <string name="label_five_day_forecast">Search Song</string>
     <string name="label_settings">Settings</string>
 
